test/compare/testdata/fixedbugs/issue528.go
// errorcheck

package main

type t struct {
	x int
	x int // ERROR `duplicate field x`
}

func main() {}
